Notes/003-longhorn/cilium-ingress-lh.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
  # labels:
  #   cilium-lb: "true"
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod" # matches the name of the issuer in the NS
spec:
  ingressClassName: cilium
  rules:
    - host: lh-spitfire.srvrs.co
      http:
        paths:
        - backend:
            service:
              name: longhorn-frontend
              port:
                number: 80
          path: /
          pathType: Prefix
  tls:
    - hosts:
      - lh-spitfire.srvrs.co
      secretName: lh-spitfire-srvrs-co-tls
